# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "custom_header_validation"
version = "1.0.4"
rust-version = "1.74.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "deadbeaf-8261-4b5c-a591-06fea582f980"
definition_asset_id = "custom-header-validation"
implementation_asset_id = "custom-header-validation-flex"

[dependencies]
pdk = { version = "1.1.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.0.1", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
